--- a/startsida2016/css/app.css
+++ b/startsida2016/css/app.css
@@ -21,6 +21,9 @@ header {
   background-size: cover;
   transition: all 0.4s ease-in-out; }
 
+.columns {
+  margin-bottom: 1.875em; }
+
 .container {
   max-width: 1200px;
   width: 100%;
@@ -51,6 +54,120 @@ header {
 .hero .item .hero-text p {
   overflow: hidden;
   max-width: 40ch; }
+
+.feature {
+  height: 460px;
+  padding: 5.5rem;
+  background: url("../images/RIPPLE_PATTERNS_LANDSCAPE_RGB-18.png") no-repeat center center;
+  background-size: cover; }
+
+.feature .container {
+  position: relative;
+  width: 100%;
+  height: 100%; }
+
+.feature p {
+  color: #fff;
+  max-width: 58ch; }
+
+.feature h2 {
+  color: #fff;
+  max-width: 18ch; }
+
+.feature .itemleft {
+  width: 50%;
+  float: left;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%); }
+
+.feature .itemleft .button {
+  background-color: #fff;
+  color: #000; }
+
+.feature .itemright {
+  width: 40%;
+  float: right;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%); }
+
+.left_box {
+  width: 100%;
+  height: 380px;
+  padding: 2.5rem;
+  background: url("../images/left_box.jpg") no-repeat center center;
+  background-size: cover; }
+
+.left_box .container {
+  position: relative;
+  width: 100%;
+  height: 100%; }
+
+.left_box .container .itemleft {
+  float: left;
+  max-width: 60%;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%); }
+
+.left_box .container .itemleft h3 {
+  color: #fff; }
+
+.left_box .container .itemleft p {
+  color: #fff; }
+
+.left_box .container .itemleft .button {
+  position: relative;
+  background-color: #fff;
+  color: #000; }
+
+.left_box .container .itemright {
+  float: right;
+  max-width: 40%;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%); }
+
+.right_box {
+  width: 100%;
+  height: 380px;
+  padding: 2.5rem;
+  background: url("../images/right_box.jpg") no-repeat center center;
+  background-size: cover; }
+
+.right_box .container {
+  position: relative;
+  width: 100%;
+  height: 100%; }
+
+.right_box .container .itemleft {
+  float: left;
+  max-width: 60%;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%); }
+
+.right_box .container .itemleft h3 {
+  color: #fff; }
+
+.right_box .container .itemleft p {
+  color: #fff; }
+
+.right_box .container .itemleft .button {
+  position: relative;
+  background-color: #fff;
+  color: #000; }
 
 @media (max-width: 894px) {
   .hero {
@@ -126,42 +243,9 @@ header {
   .hero .item .hero-text button {
     margin-top: 0px; } }
 
-.rotate {
-  background: url("../images/RIPPLE_PATTERNS_LANDSCAPE_RGB-18.png") no-repeat center center;
-  background-size: cover; }
-
-.feature {
-  width: 100%;
-  margin: 0;
-  padding: 4rem 4rem 4rem 4rem;
-  transition: all 0.4s ease-in-out; }
-
-.feature p {
-  color: #fff;
-  max-width: 58ch; }
-
-.feature h2 {
-  color: #fff;
-  max-width: 18ch; }
-
-.feature .itemleft {
-  width: 50%;
-  float: left;
-  position: relative;
-  top: 2rem;
-  bottom: 4rem; }
-
-.feature .itemleft .button {
-  background-color: #fff;
-  color: #000; }
-
-.feature .itemright {
-  width: 40%;
-  float: right;
-  position: relative;
-  margin-bottom: 4rem; }
-
 @media (max-width: 894px) {
+  .columns {
+    margin-bottom: 1.25em; }
   header {
     height: 80px; }
   .hero {
@@ -169,27 +253,102 @@ header {
     background-size: cover;
     transition: all 0.4s ease-in-out; }
   .feature {
-    margin: 0;
-    padding: 0rem 1rem 0rem 1rem;
-    transition: all 0.4s ease-in-out; }
+    padding: 3rem;
+    background: url("../images/RIPPLE_PATTERNS_LANDSCAPE_RGB-18.png") no-repeat center center;
+    background-size: cover; }
+  .feature .container {
+    position: relative;
+    width: 100%;
+    height: 100%; }
   .feature p {
     color: #fff;
-    text-align: left; }
+    max-width: 58ch; }
   .feature h2 {
     color: #fff;
-    text-align: left; }
+    max-width: 18ch; }
   .feature .itemleft {
+    width: 50%;
     float: left;
     position: relative;
-    top: 2rem;
-    bottom: 2rem; }
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
+  .feature .itemleft .button {
+    background-color: #fff;
+    color: #000; }
   .feature .itemright {
+    width: 45%;
     float: right;
     position: relative;
-    margin-bottom: 4rem;
-    margin-top: 4rem; } }
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
+  .left_box {
+    width: 100%;
+    height: 380px;
+    padding: 1rem;
+    background: url("../images/left_box.jpg") no-repeat center center;
+    background-size: cover; }
+  .left_box .container {
+    position: relative;
+    width: 100%;
+    height: 100%; }
+  .left_box .container .itemleft {
+    float: left;
+    max-width: 60%;
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
+  .left_box .container .itemleft h3 {
+    color: #fff; }
+  .left_box .container .itemleft p {
+    color: #fff; }
+  .left_box .container .itemleft .button {
+    position: relative;
+    background-color: #fff;
+    color: #000; }
+  .left_box .container .itemright {
+    float: right;
+    max-width: 40%;
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
+  .right_box {
+    width: 100%;
+    height: 380px;
+    padding: 1rem;
+    background: url("../images/right_box.jpg") no-repeat center center;
+    background-size: cover; }
+  .right_box .container {
+    position: relative;
+    width: 100%;
+    height: 100%; }
+  .right_box .container .itemleft {
+    float: left;
+    max-width: 60%;
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
+  .right_box .container .itemleft h3 {
+    color: #fff; }
+  .right_box .container .itemleft p {
+    color: #fff; }
+  .right_box .container .itemleft .button {
+    position: relative;
+    background-color: #fff;
+    color: #000; } }
 
 @media (max-width: 496px) {
+  .columns {
+    margin-bottom: 0.625em; }
   header {
     height: 60px; }
   .hero {
@@ -198,113 +357,105 @@ header {
     height: 90%;
     transition: all 0.4s ease-in-out; }
   .feature {
-    margin: 0;
-    padding: 0rem 1rem 0rem 1rem;
-    transition: all 0.4s ease-in-out; }
+    height: 550px;
+    padding: 1.5rem;
+    background: url("../images/RIPPLE_PATTERNS_LANDSCAPE_RGB-18.png") no-repeat center center;
+    background-size: cover; }
+  .feature .container {
+    position: relative;
+    width: 100%;
+    height: 100%; }
   .feature p {
     color: #fff;
-    text-align: center;
-    padding: 0 1rem 0 1rem;
-    margin-bottom: 2rem; }
+    text-align: center; }
   .feature h2 {
-    max-width: 100%;
+    max-width: none;
     color: #fff;
     text-align: center; }
   .feature .itemleft {
     width: 100%;
     float: none;
     position: relative;
-    top: 2rem;
-    bottom: 2rem; }
+    top: 0%;
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none; }
   .feature .itemleft .button {
-    position: relative;
-    left: 50%;
-    margin-right: -50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translate(-50%, -50%);
+    display: block;
+    float: none;
     background-color: #fff;
-    color: #000; }
+    color: #000;
+    margin: 0 auto; }
   .feature .itemright {
-    width: 100%;
-    padding: 0 4rem 0 4rem;
+    display: block;
+    width: 70%;
     float: none;
     position: relative;
-    margin-bottom: 2rem;
-    margin-top: 1rem; } }
-
-.left_box {
-  width: 100%;
-  height: 380px;
-  padding: 2.5rem;
-  background: url("../images/left_box.jpg") no-repeat center center;
-  background-size: cover; }
-
-.left_box .container {
-  position: relative;
-  width: 100%;
-  height: 100%; }
-
-.left_box .container .itemleft {
-  float: left;
-  max-width: 60%;
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%); }
-
-.left_box .container .itemleft h3 {
-  color: #fff; }
-
-.left_box .container .itemleft p {
-  color: #fff; }
-
-.left_box .container .itemleft .button {
-  position: relative;
-  background-color: #fff;
-  color: #000; }
-
-.left_box .container .itemright {
-  float: right;
-  max-width: 40%;
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%); }
-
-.right_box {
-  width: 100%;
-  height: 380px;
-  padding: 2.5rem;
-  background: url("../images/right_box.jpg") no-repeat center center;
-  background-size: cover; }
-
-.right_box .container {
-  position: relative;
-  width: 100%;
-  height: 100%; }
-
-.right_box .container .itemleft {
-  float: left;
-  max-width: 60%;
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%); }
-
-.right_box .container .itemleft h3 {
-  color: #fff; }
-
-.right_box .container .itemleft p {
-  color: #fff; }
-
-.right_box .container .itemleft .button {
-  position: relative;
-  background-color: #fff;
-  color: #000; }
+    margin: 0 auto;
+    top: 2rem;
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none; }
+  .left_box {
+    width: 100%;
+    height: 380px;
+    padding: 1rem;
+    background: url("../images/left_box.jpg") no-repeat center center;
+    background-size: cover; }
+  .left_box .container {
+    position: relative;
+    width: 100%;
+    height: 100%; }
+  .left_box .container .itemleft {
+    float: left;
+    max-width: 60%;
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
+  .left_box .container .itemleft h3 {
+    color: #fff; }
+  .left_box .container .itemleft p {
+    color: #fff; }
+  .left_box .container .itemleft .button {
+    position: relative;
+    background-color: #fff;
+    color: #000; }
+  .left_box .container .itemright {
+    float: right;
+    max-width: 40%;
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
+  .right_box {
+    width: 100%;
+    height: 380px;
+    padding: 1rem;
+    background: url("../images/right_box.jpg") no-repeat center center;
+    background-size: cover; }
+  .right_box .container {
+    position: relative;
+    width: 100%;
+    height: 100%; }
+  .right_box .container .itemleft {
+    float: left;
+    max-width: 75%;
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
+  .right_box .container .itemleft h3 {
+    color: #fff; }
+  .right_box .container .itemleft p {
+    color: #fff; }
+  .right_box .container .itemleft .button {
+    position: relative;
+    background-color: #fff;
+    color: #000; } }
 
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 /**
@@ -746,17 +897,21 @@ button {
     padding-left: 0;
     padding-right: 0; }
   .row .row {
-    margin-left: 0;
-    margin-right: 0; }
+    margin-left: -0.625rem;
+    margin-right: -0.625rem; }
     @media screen and (min-width: 31em) {
       .row .row {
         margin-left: -0.625rem;
         margin-right: -0.625rem; } }
     @media screen and (min-width: 44em) {
       .row .row {
+        margin-left: -0.625rem;
+        margin-right: -0.625rem; } }
+    @media screen and (min-width: 894em) {
+      .row .row {
         margin-left: -0.9375rem;
         margin-right: -0.9375rem; } }
-    @media screen and (min-width: 894em) {
+    @media screen and (min-width: 64em) {
       .row .row {
         margin-left: -0.9375rem;
         margin-right: -0.9375rem; } }
@@ -772,17 +927,21 @@ button {
 .column, .columns {
   width: 100%;
   float: left;
-  padding-left: 0;
-  padding-right: 0; }
+  padding-left: 0.625rem;
+  padding-right: 0.625rem; }
   @media screen and (min-width: 31em) {
     .column, .columns {
       padding-left: 0.625rem;
       padding-right: 0.625rem; } }
   @media screen and (min-width: 44em) {
     .column, .columns {
+      padding-left: 0.625rem;
+      padding-right: 0.625rem; } }
+  @media screen and (min-width: 894em) {
+    .column, .columns {
       padding-left: 0.9375rem;
       padding-right: 0.9375rem; } }
-  @media screen and (min-width: 894em) {
+  @media screen and (min-width: 64em) {
     .column, .columns {
       padding-left: 0.9375rem;
       padding-right: 0.9375rem; } }
@@ -1048,8 +1207,8 @@ button {
   margin-right: 0; }
 
 .small-uncollapse > .column, .small-uncollapse > .columns {
-  padding-left: 0;
-  padding-right: 0; }
+  padding-left: 0.625rem;
+  padding-right: 0.625rem; }
 
 .small-centered {
   float: none;
@@ -1466,8 +1625,8 @@ button {
     margin-left: 0;
     margin-right: 0; }
   .large-uncollapse > .column, .large-uncollapse > .columns {
-    padding-left: 0.9375rem;
-    padding-right: 0.9375rem; }
+    padding-left: 0.625rem;
+    padding-right: 0.625rem; }
   .large-centered {
     float: none;
     margin-left: auto;
@@ -2223,8 +2382,8 @@ kbd {
   vertical-align: middle;
   border: 1px solid transparent;
   border-radius: 30px;
-  padding: 1.5em 2em;
-  margin: 0 0 1rem 0;
+  padding: 17px 17px;
+  margin: 0 0 0 0;
   font-size: 0.8em;
   background-color: #990ae3;
   color: #f2f2f2; }
@@ -2328,7 +2487,7 @@ kbd {
     position: relative;
     top: 0.4em;
     float: right;
-    margin-left: 2em;
+    margin-left: 17px;
     display: inline-block; }
   .button.arrow-only::after {
     margin-left: 0;
