--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -14,9 +14,9 @@ html, body {
     padding: 0;
     margin: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 1em;
+    font-size: 16px;
     font-weight: normal;
-    line-height: 1.5;
+    line-height: 1.5em;
     color: #000000;
     background: #f2f2f2;
     -webkit-font-smoothing: antialiased;
@@ -26,6 +26,35 @@ html, body {
 /*GLOBAL CLASSES
 --------------------------------------*/
 
+h1 {
+	font-family: 'Pebble', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 60px;
+	text-transform: uppercase;
+}
+
+h2 {
+	font-family: 'Pebble', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 48px;
+	text-transform: uppercase;
+}
+
+h3 {
+	font-family: 'Pebble', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 36px;
+	text-transform: uppercase;
+}
+
+h4 {
+	font-family: 'Pebble', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 24px;
+	text-transform: uppercase;
+    display: inline;
+    -webkit-margin-before: 1.33em;
+    -webkit-margin-after: 1.33em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    font-weight: bold;
+}
 
 /*NAVIGATION
 --------------------------------------*/
@@ -51,11 +80,109 @@ html, body {
     z-index: 1;
 }
 
+.inner {
+	width: 1176px;
+	height: 100%;
+	margin: 0 auto;
+}
+
+.logo {
+	display: block;
+	float: left;
+	width: 195px;
+	position: relative;
+	margin-right: 70px;
+  	top: 50%;
+  	transform: translateY(-50%);
+}
+
+.nav1 {
+	display: block;
+	float: left;
+	position: relative;
+  	top: 50%;
+  	transform: translateY(-50%);
+}
+
+.nav1 a {
+	margin-right: 45px;
+}
+
+a:link {
+	color: #000;
+	text-decoration: none;
+}
+
+a:visited {
+	color: #000;
+} 
+
+a:hover {
+	color: #990AE3;
+} 
+
+a:active {
+	color: #000;
+}
+
+.nav2 {
+	display: block;
+	float: right;
+	position: relative;
+  	top: 50%;
+  	transform: translateY(-50%);
+} 
+
+/*BREADCRUMBS
+--------------------------------------*/
+.breadcrumbs {
+    display: block;
+    background-color: #990AE3;
+    width: 100%;
+    height: 42px;
+    position: relative;
+}
+
+.links {
+	display: block;
+	position: relative;
+  	top: 50%;
+  	transform: translateY(-50%);
+}
+
+.links a {
+	font-size: 12px;
+	color: #fff;
+}
+
+.links a:visited {
+	color: #fff;
+} 
+
+.links a:hover {
+	text-decoration: underline;
+} 
+
+.links a:active {
+	color: #fff;
+	opacity: 0.6;
+}
+
+.links p {
+	display: inline;
+	font-size: 14px;
+	color: #fff;
+	margin-right: 8px;
+	margin-left: 8px;
+	position: relative;
+	top: 1px;
+}
+
 /*HERO
 --------------------------------------*/
 .hero {
 	display: block;
-    background-color: #ffffff;
+    background-color: #990AE3;
     width: 100%;
     height: 500px;
     position: relative;
@@ -70,10 +197,51 @@ html, body {
 .footer {
 	display: block;
 	background-color: #990AE3;
+	color: #fff;
 	width: 100%;
-    height: 320px;
+    height: 400px;
     position: relative;
 }
+
+.footer a {
+	color: #fff;
+}
+
+.footer a:hover {
+	color: #fff;
+	opacity: 0.6;
+}
+
+.footer .inner {
+	height: 80%;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.footer .inner div {
+    float: left;
+    width: 20%;
+    font-size: 14px;
+    line-height: 2.5em;
+}
+
+.footersocial {
+	height: 225px;
+	background-color: #f2f2f2;
+	font-size: 14px;
+}
+
+.footersocial img {
+	margin: 0 15px;
+}
+
+.footersocial .inner .social {
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
 
 /*SHARE
 --------------------------------------*/
