--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -30,6 +30,7 @@ h1 {
 	font-family: 'Pebble', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 60px;
 	text-transform: uppercase;
+	line-height: 1.5em;
 }
 
 h2 {
