--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -29,8 +29,9 @@ html, body {
 h1 {
 	font-family: 'Pebble', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 60px;
+	color: #fff;
 	text-transform: uppercase;
-	line-height: 1.5em;
+	line-height: 1em;
 	display: inline;
     font-weight: bold;
 }
