--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -60,6 +60,12 @@ h4 {
     font-weight: bold;
 }
 
+h5 {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 21px;
+	display: inline;
+}
+
 /*NAVIGATION
 --------------------------------------*/
 
@@ -202,7 +208,7 @@ a:active {
 
 .content p {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 1em;
+	font-size: 16px;
 }
 
 /*FOOTER
