--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -18,7 +18,7 @@ html, body {
     font-weight: normal;
     line-height: 1.5em;
     color: #000000;
-    background: #f2f2f2;
+    background: #990AE3;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -64,6 +64,7 @@ h5 {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 21px;
 	display: inline;
+	font-weight: normal;
 }
 
 /*NAVIGATION
