--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -7,7 +7,7 @@
  *  By: Petter Andersson @ Ziggy Creative Colony
 
 
-/*GLOBALS SETTINGS
+/*GLOBAL SETTINGS
 --------------------------------------*/
 html, body {
 	height: 100%;
@@ -67,17 +67,25 @@ h5 {
 	font-weight: normal;
 }
 
-/*NAVIGATION
---------------------------------------*/
-
-
 /*FORMS
 --------------------------------------*/
 
-
-/*MODULES
---------------------------------------*/
-
+input {
+    display: block;
+    width: 17.5rem;
+    padding: .25rem 2.25rem .25rem .9375rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0;
+    height: 3.125rem;
+    padding: 0 2.1875em;
+    font-size: .875em;
+    background-color: #FFF;
+    border: 1px solid #000;
+    -webkit-transition: border-color .5s ease;
+    transition: border-color .5s ease;
+}
 
 /*HEADER
 --------------------------------------*/
