--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -70,21 +70,12 @@ h5 {
 /*FORMS
 --------------------------------------*/
 
-input {
-    display: block;
-    width: 17.5rem;
-    padding: .25rem 2.25rem .25rem .9375rem;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: 0;
-    height: 3.125rem;
-    padding: 0 2.1875em;
-    font-size: .875em;
-    background-color: #FFF;
-    border: 1px solid #000;
-    -webkit-transition: border-color .5s ease;
-    transition: border-color .5s ease;
+form.form p.submit input {
+    margin: 0 10px 0 0;
+    padding: 2px 12px;
+    color: #000;
+    background-color: #fff;
+    font-weight: bold;
 }
 
 /*HEADER
