--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -71,23 +71,23 @@ h5 {
 --------------------------------------*/
 
 form.form p.submit input {
-    
     border-color: #990ae3;
     background-color: #FFF;
     color: #000;
     font-weight: 700;
     border: 1px solid transparent;
     font-size: .875rem;
-    border-radius: 2.0833333334em;
+    border-radius: 30px;
     line-height: 1;
-    padding: 1.0625rem 1.875rem;
+    height: 50px;
+    padding: 1.0625rem 1.875rem !important;
     text-transform: uppercase;
     letter-spacing: .08571428571em;
     -webkit-transition: background-color .15s ease,color .15s ease;
     transition: background-color .15s ease,color .15s ease;
     white-space: nowrap;
     vertical-align: middle;
-    margin: .0625rem .375rem;
+    margin: .0625rem .375rem !important;
     display: inline-block;
     cursor: pointer;
     outline: none;
