--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -97,10 +97,11 @@ form.form input.text {
     width: 285px;
     height: 46px;
     border: none !important;
+    font-size: 16px;
 }
 form.form input {
     font-weight: normal;
-    padding: 2px;
+    padding: 2px 2px 2px 2px;
 }
 
 /*HEADER
