--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -98,6 +98,7 @@ form.form input.text {
     height: 46px;
     border: none !important;
     font-size: 16px;
+    padding: 2px 2px 2px 2px;
 }
 form.form input {
     font-weight: normal;
