--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -73,6 +73,8 @@ h5 {
 p.submit {
 	position: relative;
 	float: right;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 form.form p.submit input {
@@ -98,6 +100,8 @@ form.form p.submit input {
     display: inline-block;
     cursor: pointer;
     outline: none;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 form.form p span.description {
