--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -70,14 +70,27 @@ h5 {
 /*FORMS
 --------------------------------------*/
 
+
+
 p.form-field.email.pd-text.required.no-label {
-	width: 600px;
+	width: 435px;
+	float: left;
 }
 
+form.form p.no-label, form.form p.email-pref {
+    margin: 0 25px 0 0;
+    padding: 0;
+}
 
 .submit {
 	display: inline-block;
 	position: relative;
+}
+
+form.form p.submit {
+	margin: 0 auto;
+    padding: 0;
+}
 }
 
 form.form p.submit input {
@@ -123,7 +136,7 @@ form.form p.errors {
 }
 
 form.form input.text {
-    width: 285px !important;
+    width: 435px !important;
     height: 46px !important;
     border: none !important;
     font-size: 16px;
