--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -1,11 +1,8 @@
 /*
 
- *
-
  *  Telia International Carrier style sheet for landing pages
 
- *  By: Petter Andersson @ Ziggy Creative Colony
-
+ *
 
 /*GLOBAL SETTINGS
 --------------------------------------*/
@@ -126,7 +123,8 @@ form.form p.error {
 }
 
 p.error.no-label {
-	width: 0px;
+	display: inline-block !important;
+	width: 0px !important;
 
 }
 
@@ -271,6 +269,13 @@ a:active {
     height: 500px;
     position: relative;
     text-align: center;
+}
+
+.middle {
+	display: block;
+	position: relative;
+	width: 750px;
+	margin: 0 auto;
 }
 
 /*CONTENT
